plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.owasp.dependencycheck' version '12.2.2'
	id 'jacoco'
	id 'com.github.ben-manes.versions' version '0.54.0'
	id 'com.github.spotbugs' version '6.5.9'
}
group = 'com.example'
version = '0.0.1-SNAPSHOT'
ext {
	set('opentelemetry.version', '1.64.0')
	set('commons-lang3.version', '3.20.0')
	// Pin logback to 1.5.38 to fix CVE-2026-13006 (ACE via conditional config file processing)
	// (Spring Boot 4.1.0 BOM ships 1.5.34 which is vulnerable; 1.5.35 fixes CVE-2026-13006,
	//  1.5.36+ adds additional hardening for disallowed references)
	set('logback.version', '1.5.38')
	// Pin Jackson 2.x BOM to 2.22.1 to fix:
	//   - CVE-2026-59888 (@JsonIgnore on Record bypassed with PropertyNamingStrategy)
	//   - jackson-core: async parser maxNumberLength bypass (fixed in 2.21.4)
	//   - CVE-2026-54512/13/14/15/16/17/18 (PTV bypass, @JsonView, SSRF, etc.)
	// Spring Boot 4.1.0 BOM ships 2.21.4 by default.
	set('jackson-2-bom.version', '2.22.1')
	// Pin Jackson 3.x BOM to 3.2.1 (latest) to fix CVE-2026-59889 (@JsonView bypass for
	// @JsonUnwrapped container properties on deserialization). Spring Boot 4.1.0 BOM
	// ships 3.1.4 which is vulnerable.
	set('jackson-bom.version', '3.2.1')
	// Pin Netty to 4.2.16.Final to fix GHSA-mfg7-5gfp-c4w3 (Memory Leak in DNS Record Decoder
	// via Malformed Domain Names). Spring Boot 4.1.0 BOM ships 4.2.15.Final which is vulnerable.
	set('netty.version', '4.2.16.Final')
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// Disable the plain jar artifact. Only the Spring Boot executable jar (build by
// the `bootJar` task) is produced in build/libs/, so the Dockerfiles' wildcard
// `COPY build/libs/*.jar` always matches exactly one file instead of failing
// when a `-plain.jar` is also present (e.g. after `./gradlew build`).
jar {
	enabled = false
}
repositories {
	mavenCentral()
}
dependencies {
	implementation platform("org.springframework.boot:spring-boot-dependencies:4.1.0")
	annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:4.1.0")
	testImplementation platform("org.springframework.boot:spring-boot-dependencies:4.1.0")
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// Netty — explicit pins so Dependabot's Gradle parser sees the correct versions
	// (Dependabot does not resolve BOM property overrides set via ext.set()).
	// Fixes GHSA-mfg7-5gfp-c4w3 (Memory Leak in DNS Record Decoder via Malformed Domain Names).
	implementation platform('io.netty:netty-bom:4.2.16.Final')
	implementation 'io.netty:netty-codec-dns:4.2.16.Final'
	// Jackson — explicit pins so Dependabot's Gradle parser sees the correct versions
	// (Dependabot does not resolve BOM property overrides set via ext.set()).
	//   - jackson-databind 2.x / jackson-core 2.x: fixes 8 CVEs (HIGH: async parser bypass,
	//     MEDIUM: @JsonIgnore/@JsonView bypasses, PTV bypass, SSRF, etc.)
	//   - jackson-annotations 2.x: MUST be >= 2.22 for JsonApplyView used by Jackson 3.x
	//     backward-compat module. 2.22 also includes 2.22.1 CVE fixes.
	//   - jackson-databind 3.x: fixes CVE-2026-59889 (@JsonView bypass for @JsonUnwrapped)
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.1'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.22.1'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.22'
	implementation 'tools.jackson.core:jackson-databind:3.2.1'
	// Hibernate 2nd-level cache with Caffeine JCache region factory
	implementation 'org.hibernate.orm:hibernate-jcache'
	implementation 'com.github.ben-manes.caffeine:jcache:3.2.0'
	// Cache (Redis-backed via spring-boot-starter-data-redis; Caffeine was unused)
	// Observability
	implementation 'org.springframework.boot:spring-boot-micrometer-tracing-opentelemetry'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
	implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
	// OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
	// Database migration
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql:12.11.0'
	// Pin flyway-core to match flyway-database-postgresql (Spring Boot 4.1.0 BOM ships 12.4.0)
	implementation 'org.flywaydb:flyway-core:12.11.0'
	// Runtime
	runtimeOnly 'org.postgresql:postgresql:42.7.13'
	runtimeOnly 'com.h2database:h2:2.4.240'
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Static analysis
	spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.14.0'
}
spotbugs {
	toolVersion = '4.10.3'
	ignoreFailures = false
	// TODO(Gradle 10): Replace string values with enum constants (Gradle 10 removes
	// automatic String→Enum coercion for Gradle properties).
	effort = 'max'
	reportLevel = 'high'
	excludeFilter = file("spotbugs-exclude.xml")
}
tasks.register("writeMainClasspath") {
	doLast {
		file("build/main-cp.txt").text = sourceSets.main.runtimeClasspath.asPath
	}
}
tasks.named("test") {
	useJUnitPlatform {
		excludeTags 'benchmark', 'testcontainers'
	}
	maxParallelForks = Math.max(1, (int) (Runtime.runtime.availableProcessors() * 0.75))
	environment "SPRING_SECURITY_PASSWORD", "admin-password"
	systemProperty "spring.cache.type", "simple"
	finalizedBy(tasks.jacocoTestReport)
}

tasks.register("benchmarkTest", Test) {
	group = "benchmark"
	description = "Runs benchmark tests (tagged @Tag('benchmark'))."
	useJUnitPlatform {
		includeTags 'benchmark'
	}
	testClassesDirs = sourceSets.test.output
	classpath = sourceSets.test.runtimeClasspath
	maxParallelForks = 1
	environment "SPRING_SECURITY_PASSWORD", "admin-password"
	systemProperty "spring.cache.type", "simple"
	testLogging {
		showStandardStreams = true
		showExceptions = true
		showCauses = true
		showStackTraces = true
		events "passed", "skipped", "failed"
	}
}

jacoco {
	toolVersion = "0.8.15"
}
jacocoTestReport {
	dependsOn(tasks.test)
	reports {
		xml.required = true
		html.required = true
		csv.required = true
	}
}
jacocoTestCoverageVerification {
	dependsOn(tasks.test)
	violationRules {
		rule {
			limit {
				minimum = 0.80
			}
		}
	}
}
tasks.named("check") {
	dependsOn(
			tasks.jacocoTestCoverageVerification
	)
}
dependencyCheck {
	failBuildOnCVSS = 7.0f
	formats = ['HTML', 'JSON']
}
tasks.named("dependencyUpdates") {
	// Gradle 10 will enforce stricter configuration-cache rules that break the
	// ben-manes plugin's internal task wiring. This is a dev-only task (never
	// runs in CI), so excluding it from config cache is safe.
	notCompatibleWithConfigurationCache()
	rejectVersionIf {
		if (it.currentVersion != null) {
			def currentMajor = it.currentVersion.tokenize('.')[0]
			def candidateMajor = it.candidate.version.tokenize('.')[0]
			if (currentMajor != candidateMajor) {
				return true
			}
		}
		def version = it.candidate.version.toLowerCase()
		["alpha", "beta", "rc", "cr", "m", "ea"].any {
			version.contains(it)
		}
	}
}
tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
	options.incremental = true
	options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
}
tasks.matching { it.name in ["spotbugsMain", "spotbugsTest"] }.configureEach {
	enabled = true
}